LSIF: Replace job cleanup tasks with upload cleanup tasks (#6894)
